Updating date on about page

--- a/rails2df/about.html
+++ b/rails2df/about.html
@@ -31,7 +31,7 @@
 						<p>The idea for this trip came during a train ride to Cloudforce DC in March 2012.  We realized that traveling by rail is much easier than driving or flying and offered us freedoms that other forms of travel lack.</p>
 						<p>You can wander around the train car, use the restroom, dig through your luggage or just stretch your legs.  No seatbelts, no rules about electronic devices and your tray table can stay in a non-locked position for the entire trip! What’s not to love?<p>
 						<p>By going via the rails, we will also have the chance to talk about Salesforce, our successes, our challenges and enjoy the beautiful scenery.  All the while, we’ll be producing less CO<sub>2</sub> than if we had driven or flown.</p>
-						<p>Our goal is to have at least 15 Dreamforce X attendees join us for all or part of the journey into San Francisco.  Will you <a href="/join/" alt="Join">join us</a>?</p>
+						<p>Our goal is to have at least 15 Dreamforce 2013 attendees join us for all or part of the journey into San Francisco.  Will you <a href="/join/" alt="Join">join us</a>?</p>
 					</div>
 				</div>
 			</div>
