Updating text and layout

--- a/nconnelly/index.html
+++ b/nconnelly/index.html
@@ -12,7 +12,7 @@
 	<div id="mainWrapper" class="nathanPic">
 		<div id="header">
 			<h1 id="hName" class="coloredText centeredText">Nathan Connelly</h1>
-			<h3 id="hDesc" class="whiteText centeredText">Storyboard Artist - Animator - Designer</h3>
+			<h3 id="hDesc" class="whiteText centeredText">Animator</h3>
 		</div>
 		<div id="sideNav">
 			<h1 id="portfolio" class="centeredText"><a href="portfolio/" class="coloredText">Portfolio</a></h1>
@@ -21,7 +21,7 @@
 			<ul>
 				<li id="blogLink"><a href="http://thebigcountry.tumblr.com/" class="whiteText">See my Blog!</a></li>
 				<li id="twitterLink"><a href="http://twitter.com/nathanconnelly" class="whiteText">Read my Tweets!</a></li>
-				<li id="emailLink"><a href="mailto:connellydesigns@hotmail.com" class="coloredText">E-mail me!</a></li>
+				<li id="emailLink"><a href="mailto:nathanconnelly87@gmail.com" class="coloredText">E-mail me!</a></li>
 			</ul>
 		</div>
 	</div>
