adding new image to front page

--- a/nconnelly/index.html
+++ b/nconnelly/index.html
@@ -9,7 +9,7 @@
      <link rel="stylesheet" type="text/css" href="/s/base.css" />
 </head>
 <body>
-	<div id="mainWrapper" class="nathanPic">
+	<div id="nathanPic">
 		<div id="header">
 			<h1 id="hName" class="coloredText centeredText">Nathan Connelly</h1>
 			<h3 id="hDesc" class="whiteText centeredText">Animator</h3>
