--- a/nconnelly/index.html
+++ b/nconnelly/index.html
@@ -6,22 +6,18 @@
      <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
 
 	<link href='http://fonts.googleapis.com/css?family=Cantarell' rel='stylesheet' type='text/css' />
-     <link rel="stylesheet" type="text/css" href="/s/base.css" />
+     <link rel="stylesheet" type="text/css" href="/s/base.css" media="screen" />
+	<link rel="stylesheet" type="text/css" href="/s/home_short.css" media="screen and (max-height: 900px)"/>
+	<link rel="stylesheet" type="text/css" href="/s/home.css" media="screen and (min-height: 900px)"/>
 </head>
 <body>
-	<div id="nathanPic">
-		<div id="header">
-			<h1 id="hName" class="coloredText centeredText">Nathan Connelly</h1>
-			<h3 id="hDesc" class="whiteText centeredText">Animator</h3>
-		</div>
+	<div id="wrapper">
 		<div id="sideNav">
 			<h1 id="portfolio" class="centeredText"><a href="portfolio/" class="coloredText">Portfolio</a></h1>
-			<h2 id="comics" class="centeredText"><a href="comics/" class="coloredText">Comics</a></h2>
 			<h2 id="demoreel" class="centeredText"><a href="demoreel/" class="coloredText">Demo Reel</a></h2>
 			<ul>
-				<li id="blogLink"><a href="http://thebigcountry.tumblr.com/" class="whiteText">See my Blog!</a></li>
-				<li id="twitterLink"><a href="http://twitter.com/nathanconnelly" class="whiteText">Read my Tweets!</a></li>
-				<li id="emailLink"><a href="mailto:nathanconnelly87@gmail.com" class="coloredText">E-mail me!</a></li>
+				<li id="emailLink"><a href="mailto:nathanconnelly87@gmail.com" class="coloredText">email</a></li>
+				<li id="blogLink"><a href="http://thebigcountry.tumblr.com/" class="coloredText">blog</a></li>
 			</ul>
 		</div>
 	</div>
