--- a/deadlypenguin/people.html
+++ b/deadlypenguin/people.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="/s/base_new.css" />
 	<link rel="stylesheet" type="text/css" href="/s/people_new.css" />
 	<script type="text/javascript" src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
-	<script type="text/javascript" src="http://code.jquery.com/mobile/1.2.0/jquery.mobile-1.2.0.min.js"></script>
+<!--	<script type="text/javascript" src="http://code.jquery.com/mobile/1.2.0/jquery.mobile-1.2.0.min.js"></script>-->
 	<script type="text/javascript" src="/j/people.js"></script>
 	<script type="text/javascript">
 		var _gaq = _gaq || [];
