Overhaul of some deadlypenguin stuff

--- a/deadlypenguin/404.html
+++ b/deadlypenguin/404.html
@@ -3,7 +3,7 @@
 <head>
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
 	<title>Deadlypenguin.com - 404</title>
-	<link rel="stylesheet" type="text/css" href="/s/base_new.css" />
+	<link rel="stylesheet" type="text/css" href="/s/base.css" />
 	<link rel="stylesheet" type="text/css" href="/s/people.css" />
 	<script type="text/javascript">
 		var _gaq = _gaq || [];
