--- a/deadlypenguin/gallery.html
+++ b/deadlypenguin/gallery.html
@@ -17,7 +17,7 @@
 			var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
 		})();
 	</script>
-	<link rel="stylesheet" type="text/css" href="/s/base_new.css" /> 
+	<link rel="stylesheet" type="text/css" href="/s/base.css" /> 
 	<link rel="stylesheet" type="text/css" href="/s/gallery.css" />
 </head>
 <body>
