--- a/deadlypenguin/places.html
+++ b/deadlypenguin/places.html
@@ -2,15 +2,15 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-	<title>Deadlypenguin.com - People</title>
+	<title>Deadlypenguin.com - Places</title>
 	<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Tangerine" />
 	<link rel='stylesheet' type='text/css' href='http://fonts.googleapis.com/css?family=Lobster' />
-	<link rel="stylesheet" type="text/css" href="/s/base_new.css" />
-	<link rel="stylesheet" type="text/css" href="/s/places_svg.css" />
+	<link rel="stylesheet" type="text/css" href="/s/base.css" />
+	<link rel="stylesheet" type="text/css" href="/s/places.css" />
 	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
 	<script src="http://cdnjs.cloudflare.com/ajax/libs/raphael/2.0.1/raphael-min.js" type="text/javascript" charset="utf-8"></script>
 	<script type="text/javascript" src="/j/font.js"></script>
-	<script type="text/javascript" src="/j/places_svg.js"></script>
+	<script type="text/javascript" src="/j/places.js"></script>
 	<script type="text/javascript">
 		var _gaq = _gaq || [];
 		_gaq.push(['_setAccount', 'UA-10566743-5']);
