--- a/deadlypenguin/websites.html
+++ b/deadlypenguin/websites.html
@@ -3,7 +3,7 @@
 <head>
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
 	<title>Deadlypenguin.com - Design</title>
-	<link rel="stylesheet" type="text/css" href="/s/base_new.css" />
+	<link rel="stylesheet" type="text/css" href="/s/base.css" />
 	<link rel="stylesheet" type="text/css" href="/s/sites.css" />
 	<link rel="stylesheet" type="text/css" href="/s/lightbox.css" media="screen" />
 	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
