--- a/deadlypenguin/index.html
+++ b/deadlypenguin/index.html
@@ -6,7 +6,7 @@
 	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
 	<script type="text/javascript" src="j/home.js"></script>
 
-	<link rel="stylesheet" type="text/css" href="/s/base_new.css" /> 
+	<link rel="stylesheet" type="text/css" href="/s/base.css" /> 
 	<link rel="stylesheet" type="text/css" href="/s/home.css" /> 
 </head>
 <body>
