--- a/deadlypenguin/people.html
+++ b/deadlypenguin/people.html
@@ -2,10 +2,11 @@
 <html>
 <head>
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
+	<title>Deadlypenguin.com - Places</title>
 
 	<meta name="viewport" content="width=device-width, initial-scale=1"> 
-	<link rel="stylesheet" type="text/css" href="/s/base_new.css" />
-	<link rel="stylesheet" type="text/css" href="/s/people_new.css" />
+	<link rel="stylesheet" type="text/css" href="/s/base.css" />
+	<link rel="stylesheet" type="text/css" href="/s/people.css" />
 	<script type="text/javascript" src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
 <!--	<script type="text/javascript" src="http://code.jquery.com/mobile/1.2.0/jquery.mobile-1.2.0.min.js"></script>-->
 	<script type="text/javascript" src="/j/people.js"></script>
