--- a/deadlypenguin/gallery.html
+++ b/deadlypenguin/gallery.html
@@ -5,6 +5,7 @@
 	<title>Deadlypenguin - Gallery</title>
 	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
 	<script type="text/javascript" src="/galleria/galleria-1.2.8.min.js"></script>
+	<script type="text/javascript" src="/galleria/plugins/history/galleria.history.min.js"></script>
 	<script type="text/javascript" src="/j/gallery.js"></script>
 	<script type="text/javascript">
 		var _gaq = _gaq || [];
