Adding footer with credits

--- a/deadlypenguin/code/irclog/index.html
+++ b/deadlypenguin/code/irclog/index.html
@@ -57,5 +57,22 @@
 			</div>
 		</div>
 	</div>
+	<div id="footer" class="well">
+		<div class="container">
+			<p class="muted credit">Developed by <a href="http://about.me/patrick.connelly">Patrick Connelly</a> using <a href="http://twitter.github.com/bootstrap/">Bootstrap</a>.</p>
+			<p class="muted credit"><a href="http://glyphicons.com">Glyphicons Free</a> licensed under <a href="http://creativecommons.org/licenses/by/3.0/">CC BY 3.0</a>.</p>
+		</div>
+	</div>
+	<script type="text/javascript">
+		var _gaq = _gaq || [];
+		_gaq.push(['_setAccount', 'UA-10566743-5']);
+		_gaq.push(['_trackPageview']);
+
+		(function() {
+			var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+			ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+			var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+		})();
+	</script>
 </body>
 </html>
