--- a/deadlypenguin/gallery.html
+++ b/deadlypenguin/gallery.html
@@ -1,29 +1,29 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"> 
-<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en"> 
-<head> 
-	<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-	<title>Deadlypenguin - Gallery</title>
-	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
-	<script type="text/javascript" src="/galleria/galleria-1.2.8.min.js"></script>
-	<script type="text/javascript" src="/galleria/plugins/history/galleria.history.min.js"></script>
-	<script type="text/javascript" src="/j/gallery.js"></script>
-	<script type="text/javascript">
-		var _gaq = _gaq || [];
-		_gaq.push(['_setAccount', 'UA-10566743-5']);
-		_gaq.push(['_trackPageview']);
+<!DOCTYPE html> 
+<html lang="en">
+	<head> 
+		<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
+		<title>Deadlypenguin - Gallery</title>
+		<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
+		<script type="text/javascript" src="/galleria/galleria-1.2.8.min.js"></script>
+		<script type="text/javascript" src="/galleria/plugins/history/galleria.history.min.js"></script>
+		<script type="text/javascript" src="/j/handlebars.js"></script>
+		<script type="text/javascript" src="/j/config.js"></script>
+		<script type="text/javascript" src="/j/gallery.js"></script>
 
-		(function() {
-			var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-			ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-			var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-		})();
-	</script>
-	<link rel="stylesheet" type="text/css" href="/s/base.css" /> 
-	<link rel="stylesheet" type="text/css" href="/s/gallery.css" />
-</head>
-<body>
-	<div class="hidden"><a xmlns:cc="http://creativecommons.org/ns#" href="http://www.deadlypenguin.com" property="cc:attributionName" rel="cc:attributionURL">Patrick Connelly</a></div>
-	<div id="gallery"></div>
-	<div id="footer"><span id="breadcrumb"><a href="/">home</a></span><div id="copyright"><a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/us/" alt="Creative Commons License" title="Creative Commons License"><img src="http://i.creativecommons.org/l/by-sa/3.0/80x15.png" /></a></div>
-</body>
+		<link rel="stylesheet" type="text/css" href="/s/base.css" /> 
+		<link rel="stylesheet" type="text/css" href="/s/gallery.css" />
+
+		<script id="error-template" type="text/x-handlebars-template">
+			<img src="{{error_image}}" alt="404" title="404" width="350" height="350" />
+			<p>The gallery you have requested can not be found.</p>
+		</script>
+
+		<script id="breadcrumb-template" type="text/x-handlebars-template">{{#each breadcrumb}}<a href="{{url}}">{{name}}</a> - {{/each}}</script>
+	</head>
+	<body>
+		<div class="hidden"><a xmlns:cc="http://creativecommons.org/ns#" href="http://www.deadlypenguin.com" property="cc:attributionName" rel="cc:attributionURL">Patrick Connelly</a></div>
+		<div id="gallery"></div>
+		<div id="footer"><span id="breadcrumb"><a href="/">home</a></span><div id="copyright"><a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/us/" alt="Creative Commons License" title="Creative Commons License"><img src="http://i.creativecommons.org/l/by-sa/3.0/80x15.png" /></a></div>
+		<script type="text/javascript" src="/j/ga.js"></script>
+	</body>
 </html>
