--- a/deadlypenguin/photography.html
+++ b/deadlypenguin/photography.html
@@ -105,6 +105,7 @@
 				<li><h2 id="unitedstates">United States</h2></li>
 				<li>
 					<ul>
+						<li><a href="/places/us/ak/">Alaska</a></li>
 						<li><a href="/places/us/ca/">California</a></li>
 						<li><a href="/places/us/fl/">Florida</a></li>
 						<li><a href="/places/us/ga/">Georgia</a></li>
