--- a/deadlypenguin/photography.html
+++ b/deadlypenguin/photography.html
@@ -77,6 +77,7 @@
 				<li><h2 id="canada">Canada</h2></li>
 				<li>
 					<ul>
+						<li><a href="/places/ca/vancouver/">Vancouver</a></li>
 						<li><a href="/places/ca/victoria/">Victoria</a></li>
 					</ul>
 				</li>
